--- a/css/index.css
+++ b/css/index.css
@@ -2,4 +2,87 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Montserrat', sans-serif;
+}
+
+header {
+    width: 80%;
+    color: #021732;
+    background-color: white;
+    padding-top: 5vh;
+    padding-bottom: 3vh;
+    position: fixed;
+    left: 10%;
+    top: 0vh;
+    z-index: 10;
+}
+
+header h1, 
+header img {
+    padding-right: 1vw;
+    display: inline-block;
+    line-height: normal;
+    vertical-align: middle;
+}
+
+.container {
+    width: 70%;
+    margin: 15vh auto;
+}
+
+ul{
+    font-size: 0;
+    text-align: center;
+    width: 100%;
+}
+
+li {
+    font-size: 2vh;
+    list-style-type: none;
+    display: inline-block;
+    width: calc(100% / 3 - 2vw);
+    position: relative;
+}
+
+li.center {
+    margin-left: 1vw;
+    margin-right: 1vw;
+}
+
+article img {
+    width: 100%;
+}
+
+.infos {
+    color: white;
+    font-size: 0;
+    font-weight: 700;
+    position: absolute;
+    left: 0vw;
+    bottom: 2vh;
+}
+
+.infos .inline-block {
+    display: inline-block;
+}
+
+.discount {
+    background-color: #eb0239;
+    font-size: 1vh;
+    padding: 0.5vh;
+    margin-right: 0.5vh;
+}
+
+.type-dress {
+    background-color: #00875a;
+    font-size: 1vh;
+    padding: 0.5vh;
+}
+
+.preferiti {
+    background-color: white;
+    padding: 1vh 1vw;
+    position: absolute;
+    right: 0vw;
+    top: 1vh;
 }
